# scraping_insights

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  cpt51codexmax_review.md  gemini3pro_review.md  gpt-5.1-codex-max_db_review.md  opus45_db_review.md  opus45_review.md  pyproject.toml
.cursor/plans/: comprehensive_test_expansion_9cefcb5c.plan.md  insight_mine_refactor_dbf0c58a.plan.md
packaging/: VERSION  app.icns  cli_entry.py  gen_icon.py  pyinstaller_cli.spec  pyinstaller_gui.spec  seed_settings.env
packaging/hooks/: bootstrap_env.py  set_cli_bin.py
src/insight_mine/: __init__.py  cli.py  config.py  models.py
src/insight_mine/cli/: __init__.py  args.py  main.py  orchestrator.py  output.py
src/insight_mine/connectors/: __init__.py  base.py  reddit.py  reddit_scrape.py  reddit_selenium.py  x_api.py  youtube.py  ytti.py
src/insight_mine/guis/: __init__.py
src/insight_mine/guis/pywebview/: __init__.py  app.py  bridge.py  bridge_inject.js  cli_adapter.py  cli_runner.py  envutil.py  progress_parser.py  smoke.py  storage.py  ytti_client.py
src/insight_mine/guis/pywebview/assets/: insight_mine_gui_mock_v15.html  ui.html
src/insight_mine/testing/: __init__.py  fake_cli.py
src/insight_mine/utils/: __init__.py  cache.py  io.py  logging.py  text.py
tests/: conftest.py  test_cli_args_parse.py  test_env_detection.py  test_lang_utils.py  test_progress_parser.py  test_reddit_scrape_status.py  test_reddit_selenium_status.py  test_variety_guard.py  test_ytti_disabled.py
tests/fixtures/: reddit_items.json  youtube_items.json
tests/gui/: test_app.py  test_bridge_knobs.py  test_bridge_runtime.py  test_cli_runner.py  test_smoke.py  test_storage.py  test_ui_assets.py  test_ytti_client.py
tests/integration/: test_cache_behavior.py  test_cli_collect.py  test_cli_disabled.py
tests/property/: test_filters_hypothesis.py
tests/unit/: test_cache.py  test_cli_adapter.py  test_output.py  test_text_utils.py
